tests/negative/test_ret_no_val.orb
fnc foo() i32 {
    ret;
}

fnc main() {}